css/index.css
body {
    background-color: #FFF4EC;
  }

h4 p li {
    font-family: 'Open Sans', sans-serif;
}

.logo{
    height: 30px;
}
.jumbotron {
    background-image: url(../images/Hero.jpg);
    background-size: cover;
    background-position-y: 100%;    
    background-repeat: no-repeat;
    height: 250px;
    /* height: calc(100vh - 300px); */
    display: flex;
    align-items: center;
    justify-content: center; 
}

.navItem{
font-family: 'Open Sans', sans-serif;
text-transform: uppercase;
}

.navbar-nav {
    margin-left: auto;
    margin-right: 0 !important;
}

.nav-link {
    color: black;
}


.customNav {
    background-color: #FFF4EC;

}

.order {
    font-weight: 800;
}

h1 {
    font-family: 'Gloria Hallelujah', cursive;

}

.content {
margin: 0% 2%;
}

.cardContainer {
    margin: 2%;
}

.card {
    border-style: hidden;
}

.card-body {
    padding-left: 0%;
    padding-right: 0%;
    background-color: #FFF4EC;
}

.card-body .btn {
    width: 100%;
    background-color: #232020;
    color: white;
    border-color: #232020;
}

.media {
    margin: 2%;
}
.shopPic{
    max-width: 50%;
}

h2 {
    margin: 2%;
    font-family: 'Gloria Hallelujah', cursive;

}

.footer {
    background-color: black;
    height: 50px;
}

.footer .nav-link {
    color: white;
}

